# openseal_sdk

./: Cargo.toml  README.md
examples/: conversions.rs  table_api.rs  userdata_methods.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: closure.rs  convert.rs  lib.rs  metatable.rs  registry.rs  safety.rs  types.rs  userdata_methods.rs
