[package]
name = "openseal_sdk_macros"
version = "0.1.0"
edition = "2021"
authors = ["Yan"]
description = "FFI engine and procedural macros for OpenSeal"
license = "MIT"
repository = "https://github.com/openseal-runtime/openseal_sdk"
keywords = ["macros", "ffi", "proc-macro", "openseal"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"